pre-0.18.12:
- moveTo() has started ramp generator, even if on target position

0.18.11:
- Remove obsolete queue_end variables ticks and ticks_from_last_step
- Fix for issue #33: pulse counter needed to be cleared at motor start

0.18.10:
- Reapply modified fix, which was reverted in 0.18.9

0.18.9:
- Fixed esp32 high speed step loss: partial reverted this fix for now

0.18.8:
- New API-function: isStopping()
- Fixed esp32 high speed step loss

0.18.7
- Fix compile error on esp32

0.18.6
- Running forward/backward could start with previous speed in
  opposite direction due to two missing initialization, which are
  present for move/moveTo

0.18.5
- replace 16bit division with upm_float division
- ramp generator packs per command steps for 2 ms or more. 
  Before this was 1ms. This change makes huge difference on Atmega2560

0.18.4:
- avr: Step ISR code optimization e.g. get rid of digitalRead/Write
- esp32: get rid of digitalRead/Write, too
- replave 32bit division with 16bit => much better timing on avr

0.18.3:
- esp32: extend API to attach free pulse counter for debugging
- StepperDemo extended for esp32:
	- p<n>: Attach pulse counter n to the selected stepper

0.18.2:
- extend addQueueEntry() with a start flag. This allows to first fill the queue
  and then start the queue. If several motor are started one after the other
  (with interrupts disabled), a nearly synchronous start is possible.
  Which is required for coordinated axis movement
- make use of this in enqueueing commands from ramp generator

0.18.1:
- moveByAcceleration() returns int8_t result code
- setDelayToEnable() returns an int8_t instead of int

0.18.0:
- StepperDemo extended:
	- w<ms>: Option to wait in input processing for some ms
	- test sequence 07 added, which fails on esp32
	- avr: free RAM by usage of output_msg()
    - tests can return failure, which is displayed at test end
- Rework RampGenerator: pauses are now after the step and not before. This removes